# etf-strategy

./: .cnb.yml  .editorconfig  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  alembic.ini  config.py  download_baostock.py  download_data.py  download_yahoo.py  main.py  pyproject.toml  requirements.txt  strategy_backtest.py  task.md
.github/: pull_request_template.md
alembic/: env.py
data/: 399300_daily_2005-04-08_2025-06-27_20250627_202219.csv  399437_daily_2014-12-30_2025-06-27_20250627_202331.csv  600570_daily_2010-01-01_2025-06-27_20250627_211631.csv  README.md
doc/: api.md  architecture.md  data-flow.md  deployment.md  development.md  development_guide.md  frontend-ux-audit.md  glossary.md  grid_parameter_search.md  index.md  index_grid_research.md  minute_grid_research.md  multi-source-market-data-plan.md  open-source-readiness.md  operations.md  report_reading_guide.md  strategy-engine.md  xiaomi_strategy_research.md
etf_strategy/: __init__.py  cli.py  config.py  logging_utils.py  platform_cli.py  reporting.py  settings.py  symbols.py  workflow.py
frontend/: README.md  next.config.ts  package-lock.json  package.json  playwright.config.ts
reports/: 1810_hk_grid_report.md  README.md  hstech_15m_report_index.md  report_index.md  report_registry.csv  xiaomi_grid_report.md
scripts/: start_platform_windows.bat
strategy_studio/: __init__.py  cli.py  config.py  logging_utils.py  platform_cli.py  reporting.py  settings.py  symbols.py  workflow.py
tests/: test_grid_strategy.py  (+10 more)
(+1602 files in other folders)
